# TactileBrowser

./: .gitignore  .gitmodules  README.md
.github/workflows/: autobuild.yml
desktop-src/: CMakeLists.txt  createapp.sh  lv_conf.h
desktop-src/main/: CMakeLists.txt
desktop-src/main/Source/: main.c
src/: CMakeLists.txt  sdkconfig  tactility.py
src/.tactility/: sdk.json
src/build-esp32/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  ldgen_libraries  project_description.json  x509_crt_bundle.S
src/build-esp32/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  bootloader.elf  bootloader.map  build.ninja  project_description.json
src/build-esp32/bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
src/build-esp32/bootloader-prefix/tmp/: bootloader-mkdirs.cmake
src/build-esp32/config/: kconfig_menus.json  sdkconfig.json
src/build-esp32/esp-idf/esp_system/ld/: sections.ld
src/build-esp32s3/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  TactileBrowser.app.elf  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
src/build-esp32s3/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  bootloader.elf  bootloader.map  build.ninja  kconfigs.in  project_description.json
src/build-esp32s3/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
src/build-esp32s3/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
src/build-esp32s3/config/: sdkconfig.cmake  sdkconfig.h
src/build-esp32s3/esp-idf/esp_system/ld/: sections.ld
src/main/: CMakeLists.txt
src/main/Source/: html_render.c  html_render.h  main.c
